# Advance_Rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
docs/: LLD.md
src/: ingestion.py
src/graph/: graphapp.py  state.py
src/graph/chain/: __init__.py  answer_grader.py  generation.py  hallucination_grader.py  question_router.py  retrieval_grader.py
src/graph/node/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
src/tests/: test.py  test_chain.py
